FIX : "카테고리 검색조건 변경"